# stella

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE
conf/grub/: grub.cfg
kernel/: CMakeLists.txt
kernel/include/kstd/: types.h
kernel/src/: new.cpp
kernel/src/arch/x86_64/: CMakeLists.txt  linker.ld  main.cpp
kernel/src/arch/x86_64/asm/: boot.asm
tests/: CMakeLists.txt
tests/kstd/: types.cpp
tools/: make-iso.cmake
